---
source: tests/lsp/text_document/completion.rs
expression: "complete(r#\"\n%! main.tex\n\\foobar\n\\fooba\n\\begin{foo}\n\\end{foo}\n\\begin{fo}\n        |\n       ^^\"#)"
---
[
  {
    "label": "filecontents",
    "detail": "built-in",
    "preselect": false
  },
  {
    "label": "foo",
    "detail": "user-defined",
    "preselect": false
  }
]
